--- a/index.html
+++ b/index.html
@@ -1,12 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    index
-</body>
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="./assets/fonts/iconfont.css" />
+    <style>
+      .layui-footer {
+        text-align: center;
+        font-size: 12px;
+      }
+      .layui-icon {
+        margin-left: 20px;
+        margin-right: 8px;
+      }
+      .iconfont {
+        margin-right: 8px;
+      }
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+      .layui-body {
+        overflow: hidden;
+      }
+      a {
+        transition: none;
+      }
+      .layui-nav-img {
+        width: 40px;
+        height: 40px;
+      }
+      .userinfo {
+        text-align: center;
+        height: 60px;
+        line-height: 60px;
+        font-size: 12px;
+        user-select: none;
+      }
+      .layui-side-scroll .userinfo {
+        border-bottom: 2px solid #282b33;
+      }
+      .text-avatar {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        background-color: #009688;
+        border-radius: 50%;
+        line-height: 40px;
+        text-align: center;
+        font-size: 20px;
+        color: #fff;
+        position: relative;
+        top: 4px;
+        margin-right: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="layui-layout layui-layout-admin">
+      <div class="layui-header">
+        <!-- 修改图片 -->
+        <div class="layui-logo layui-hide-xs layui-bg-black">
+          <img src="./assets/images/logo.png" alt="" />
+        </div>
+        <!-- 头部区域（可配合layui 已有的水平导航） -->
+        <!-- 个人中心及下拉信息 -->
+        <ul class="layui-nav layui-layout-right">
+          <li class="layui-nav-item layui-hide layui-show-md-inline-block">
+            <a href="javascript:;" class="userinfo">
+              <!-- 用户头像 -->
+              <img
+                src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+                class="layui-nav-img"
+              />
+              个人中心
+            </a>
+            <dl class="layui-nav-child">
+              <dd><a href="">基本资料</a></dd>
+              <dd><a href="">更换头像</a></dd>
+              <dd><a href="">重置密码</a></dd>
+            </dl>
+          </li>
+          <!-- 退出按钮 -->
+
+          <li class="layui-nav-item">
+            <a href="javascript:;" class="btnLoginOut"
+              ><span class="iconfont icon-tuichu"></span>退出</a
+            >
+          </li>
+        </ul>
+      </div>
+
+      <div class="layui-side layui-bg-black">
+        <div class="layui-side-scroll">
+          <div class="userinfo">
+            <img
+            src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+            class="layui-nav-img alt="">
+            <span class="text-avatar">h</span>
+            <span id="welcome">欢迎</span>
+          </div>
+          <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+          <ul
+            class="layui-nav layui-nav-tree"
+            lay-filter="test"
+            lay-shrink="all"
+          >
+            <li class="layui-nav-item">
+              <a href="./home/dashboard.html" target="fm"
+                ><span class="iconfont icon-home"></span>首页</a
+              >
+            </li>
+            <li class="layui-nav-item layui-nav-itemed">
+              <a class="" href="javascript:;"
+                ><span class="iconfont icon-16"></span>文章管理</a
+              >
+              <dl class="layui-nav-child">
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i> 文章类别</a
+                  >
+                </dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>文章列表</a
+                  >
+                </dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>发布文章</a
+                  >
+                </dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;"
+                ><span class="iconfont icon-user"></span>个人中心</a
+              >
+              <dl class="layui-nav-child">
+                <dd>
+                  <a href="./user/user_info.html" target="fm"
+                    ><i class="layui-icon layui-icon-app"></i>基本资料</a
+                  >
+                </dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>更换头像</a
+                  >
+                </dd>
+                <dd>
+                  <a href="./user/user_pwd.html" target="fm"
+                    ><i class="layui-icon layui-icon-app"></i>重置密码</a
+                  >
+                </dd>
+              </dl>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="layui-body">
+        <!-- 内容主体区域 -->
+        <!-- <div style="padding: 15px">
+          内容主体区域。记得修改 layui.css 和 js 的路径
+        </div> -->
+        <iframe name="fm" src="./user/user_pwd.html" frameborder="0"></iframe>
+        <!-- <iframe name="fm" src="./home/dashboard.html" frameborder="0"></iframe> -->
+
+        <!-- <iframe name="fm" src="./home/dashboard.html" frameborder="0"></iframe> -->
+      </div>
+
+      <div class="layui-footer">
+        <!-- 底部固定区域 -->
+        www.itheima.com - 黑马程序员
+      </div>
+    </div>
+  </body>
+  <script src="./assets/lib/layui/layui.all.js"></script>
+  <script src="./assets/lib/jquery.js"></script>
+  <script src="./assets/js/base.js"></script>
+  <script>
+    //   业务逻辑
+    let layer = layui.layer;
+    getUserInfo();
+    //  退出登录功能
+
+    $(".btnLoginOut").click(function () {
+      layer.confirm("is not?", { icon: 3, title: "提示" }, function (index) {
+        localStorage.removeItem("token");
+        location.href = "./login.html";
+        layer.close(index);
+      });
+    });
+
+    //   方法工具
+
+    // 获取用户信息
+    function getUserInfo() {
+      $.ajax({
+        method: "GET",
+        url: "/my/userinfo",
+        // headers: {
+        // //   Authorization: localStorage.getItem("token"),
+        // },
+        success: function (res) {
+        //   console.log(res);
+          if (res.status !== 0) {
+              
+           return layer.msg("获取用户信息失败");
+          }
+        //   renderAvatar(res.data);
+        console.log(res.data);
+        renderAvatar(res.data)
+        },
+        
+        // complete: function (res) {
+        //     console.log(res);
+        //   if (
+        //     res.responseJSON.status === 1 ||
+        //     res.responseJSON.message === "身份认证失败!"
+        //   ) {
+        //     localStorage.removeItem("token");
+        //     location.href = "./login.html";
+        //   }
+        // },
+      });
+    }
+    //渲染头像
+    function renderAvatar(user) {
+      let name = user.nickname || user.username;
+      $("#welcome").html(`欢迎${name}`);
+      if (user.user_pic!==null) {
+        $(".layui-nav-img").attr("src", user.user_pic).show();
+        $(".text-avatar").hide();
+      } else {
+        $(".layui-nav-img").hide();
+        let firstName = name[0];
+        $(".text-avatar").html(firstName.toUpperCase()).show();
+      }
+    }
+  </script>
 </html>
