--- a/index.html
+++ b/index.html
@@ -180,17 +180,17 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;"
+                  <a href="./article/article_cate.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i> 文章类别</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="./article/article_list.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i>文章列表</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="./article/article_pub.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i>发布文章</a
                   >
                 </dd>
@@ -227,7 +227,7 @@
         <!-- <div style="padding: 15px">
           内容主体区域。记得修改 layui.css 和 js 的路径
         </div> -->
-        <iframe name="fm" src="./user/user_avatar.html" frameborder="0"></iframe>
+        <iframe name="fm" src="./article/article_pub.html" frameborder="0"></iframe>
         <!-- <iframe name="fm" src="./home/dashboard.html" frameborder="0"></iframe> -->
 
         <!-- <iframe name="fm" src="./home/dashboard.html" frameborder="0"></iframe> -->
